--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,8 +18,7 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.12.45
-CoreDNS: 1.12.3
+runc: 1.3.1
 
 Talos is built with Go 1.24.6.
 """
