feat: implement HostConfig multi-doc
Fixes #10952

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.12/base-worker.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.12/base-worker.yaml
@@ -17,7 +17,6 @@ machine:
         wipe: false
     features:
         rbac: true
-        stableHostname: true
         apidCheckExtKeyUsage: true
         diskQuotaSupport: true
         kubePrism:
@@ -48,3 +47,7 @@ cluster:
             kubernetes:
                 disabled: true
             service: {}
+---
+apiVersion: v1alpha1
+kind: HostnameConfig
+auto: stable
